--- a/site/index.html
+++ b/site/index.html
@@ -50,10 +50,10 @@
             </li>
             <li class="nav-item dropdown li-nav">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Dropdown
+              data-bs-display="static" aria-expanded="false">
+              Nãotenhonome 
               </a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li>
@@ -63,6 +63,9 @@
                   <a class="dropdown-item" href="#">Something else here</a>
                 </li>
               </ul>
+            </li>
+            <li class="nav-item li-nav">
+              <a class="nav-link" href="#">Link</a>
             </li>
           </ul>
         </div>
@@ -222,7 +225,6 @@
       <h5>Copyright © 2022 Ateliê Twins Mom</h5>
     </div>
   </div>
-
 </footer>
 
 </html>
