queria já ter implementado o fade

--- a/site/index.html
+++ b/site/index.html
@@ -142,7 +142,7 @@
   <div id="produtos">
     <div class="produto">
       <div class="img-fluid">
-        <img src="https://via.placeholder.com/300x320.png" alt="">
+        <img src="imagens/produto.png" alt="">
       </div>
       <div class="produto-body">
         <span>teste</span>
@@ -150,7 +150,7 @@
     </div>
     <div class="produto">
       <div class="img-fluid">
-        <img src="https://via.placeholder.com/300x320.png" alt="">
+        <img src="imagens/produto2.png" alt="">
       </div>
       <div class="produto-body">
         <span>teste</span>
@@ -177,10 +177,10 @@
   <div class="container text-center footer-caixa">
     <div class="row">
       <div class="col">
-        Institucional
+        Sobre a Loja
       </div>
       <div class="col">
-        Sobre a Loja
+        Institucional
       </div>
       <div class="col">
         Formas de Pagamento
@@ -189,7 +189,7 @@
 
     <div class="row">
       <div class="col">
-        teste 1
+        Política d e
       </div>
       <div class="col">
         teste 1
